# Clawlet

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  MEMORY.md  PLAN_STATUS.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SKILLS_USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: quality-gates.yml  release-smoke.yml
.kilo/plans/: 1775306108538-hidden-wolf.md
clawlet/: .env.example  .flake8  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  OPERATIONS.md  README.md  __init__.py  __main__.py  config.py  config_migration.py  config_migration_matrix.py  docker-compose.yml  exceptions.py  health.py  metrics.py  pytest.ini  rate_limit.py  release_readiness.py  requirements-core.txt  requirements-dev.txt  retry.py  workspace_layout.py
clawlet-website/clawlet-site/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
clawlet/agent/: __init__.py  approval_service.py  heartbeat_reporter.py  heartbeat_turn.py  history_trimmer.py  identity.py  loop.py  memory.py  message_builder.py  models.py  outbound_publisher.py  prompts.py  recovery_checkpoint.py  response_policy.py  router.py  run_context.py  run_lifecycle.py  run_orchestrator.py  run_prelude.py  tool_parser.py  turn_executor.py  workspace.py
clawlet/benchmarks/: __init__.py  async_utils.py  coding_loop.py  context_cache.py  corpus.py  determinism.py  equivalence.py  event_schema.py  failure_taxonomy.py  lanes.py  release_gate.py  remote_parity.py  replay_reexecution.py  replay_retention.py  runner.py  stats_utils.py
clawlet/bus/: __init__.py  queue.py
clawlet/channels/: __init__.py  base.py  discord.py  slack.py  telegram.py  telegram_actions.py  telegram_callbacks.py  telegram_menu.py  telegram_ui.py  whatsapp.py
clawlet/cli/: __init__.py  agent_commands.py  benchmark_commands.py  benchmark_ui.py  benchmark_utils.py  common_ui.py  config_ui.py  cron_commands.py  cron_ui.py  dashboard_ui.py  heartbeat_commands.py  heartbeat_ui.py  migration_ui.py  models_ui.py  onboard.py  plugin_commands.py  plugin_ui.py  recovery_commands.py  recovery_ui.py  release_ui.py  replay_commands.py  replay_ui.py  runtime_paths.py  runtime_ui.py  session_commands.py  sessions_ui.py  templates.py  workspace_ui.py
clawlet/context/: __init__.py  engine.py  indexer.py  models.py  retriever.py
dashboard/: package-lock.json  package.json
docs/: channels.md  multi-agent.md  openclaw-upstream-comparison-plan.md  runtime-v2.md  scheduling.md  skills-api.md  skills.md  telegram-compatibility-plan.md  webhooks.md
examples/: minimal-config.yaml  production-config.yaml  simple_agent.py
memory/: 2026-02-11.md  2026-02-12.md  clawlet-agentic-capabilities-2026-02-25.md  clawlet-audit-2026-02-24.md  clawlet-audit-2026-02-25-production-review.md  clawlet-codebase-reanalysis-2026-02-25.md  clawlet-full-agentic-mode-2026-02-25.md  heartbeat-state.json
plans/: add-providers-plan.md  brave-search-api-plan.md  code-review-plan.md  memory-integration-plan.md  openrouter-models-dynamic.md
reviews/: code-reviewer-agent-core.md
rust-core/: Cargo.toml
scripts/: release_regression.py  release_smoke.py
tests/: conftest.py  test_agent_loop.py  test_bus.py  test_config.py  test_exceptions.py  test_provider.py  test_provider_base.py  test_rate_limit.py  test_shell_security.py  test_shell_tool.py  test_sqlite_storage.py  test_tui_store.py
(+157 files in other folders)
