[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawlet"
version = "0.1.0"
description = "A lightweight AI agent framework with identity awareness"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Clawlet Team", email = "hello@clawlet.ai" }
]
keywords = ["ai", "agent", "llm", "assistant", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0",
    "discord.py>=2.4.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

# Dashboard dependencies
[project.optional-dependencies]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
clawlet = "clawlet.cli:app"

[project.urls]
Homepage = "https://clawlet.ai"
Documentation = "https://docs.clawlet.ai"
Repository = "https://github.com/clawlet/clawlet"
Issues = "https://github.com/clawlet/clawlet/issues"

[tool.hatch.build.targets.wheel]
packages = ["clawlet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
