[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawlet"
version = "0.1.0"
description = "A lightweight AI agent framework with identity awareness"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Clawlet Team"}
]
keywords = ["ai", "agent", "llm", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    "loguru>=0.7.0",
    "aiohttp>=3.8.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.3.0",
    "slack_bolt>=1.18.0",
    "twilio>=8.0.0",
    "croniter>=1.4.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "brave-search>=0.1.0",
    "starlette>=0.34.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
clawlet = "clawlet.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawlet*"]

[tool.setuptools.package-data]
clawlet = ["py.typed"]
